--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,10 @@ body {
     height: 32px;
     background-image: url("../images/port.png");
 }
+
+#ship {
+    width: 126px;
+    height: 64px;
+    background-image: url("../images/ship.png");
+    position: absolute;
+}
