--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,14 @@ body {
     align-items: center;
 }
 
-#viewport {
-    width: 640px;
-    height: 256px;
-    position: relative;
-    overflow-x: auto;
-    background-image: url("../images/water0.png");
+#headUpDisplay {
+    color: white;
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    font-size: 18px;
+    text-align: right;
+    font-family: 'Press Start 2P';
 }
 
 #message {
@@ -68,4 +70,10 @@ body {
     padding-top: 14px;
   }
 
- 
+  #viewport {
+    width: 640px;
+    height: 256px;
+    position: relative;
+    overflow-x: auto;
+    background-image: url("../images/water0.png");
+}
